fixed the display problem of the button on Safari.

--- a/index.scss
+++ b/index.scss
@@ -61,6 +61,7 @@ button {
   background-color: transparent;
   border: 0;
   cursor: pointer;
+  -webkit-appearance: none;
 }
 
 button[disabled] {
